--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AnimationDemo</string>
+
+    <string name="header_scrolling_behavior">com.beiing.animationdemo.behavior.HeaderScrollingBehavior</string>
+    <string name="header_float_behavior">com.beiing.animationdemo.behavior.HeaderFloatBehavior</string>
 </resources>
