测试转场动画

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
 
     <string name="header_scrolling_behavior">com.beiing.animationdemo.behavior.HeaderScrollingBehavior</string>
     <string name="header_float_behavior">com.beiing.animationdemo.behavior.HeaderFloatBehavior</string>
+    <string name="detail_text">中国古代“四大美女”：西施、王昭君、貂蝉、杨玉环 中国的四大美女究竟谁排第一，本来已有定论，不过那是古代的排法。西施居首，王昭君次之，貂蝉再次，杨玉环为末。其中西施是美的化身和代名词。四大美女享有“闭月羞花之貌，沉鱼落雁之容”的美誉。“闭月、羞花、沉鱼、落雁”是由精彩故事组成的历史典故：“沉鱼”，讲的是西施浣纱时的故事；“落雁”，指的就是昭君出塞的故事；“闭月”，是述说貂蝉拜月的故事；“羞花”，谈的是杨贵妃观花时的故事。
+        \n沉鱼\n春秋战国时期，越国有一个叫西施的，是个浣纱的女子，五官端正，粉面桃花，相貌过人。她在河边浣纱时，清澈的河水映照她俊俏的身影，使她显得更加美丽，这时，鱼儿看见她的倒影，忘记了游泳，渐渐地沉到河底。从此，西施这个“沉鱼”的代称，在附近流传开来。
+        \n落雁\n汉元帝在位期间，南北交兵，边界不得安静。汉元帝为安抚北匈奴，选昭君与单于结成姻缘，以保两国永远和好。在一个秋高气爽的日子里，昭君告别了故土，登程北去。一路上，马嘶雁鸣，撕裂她的心肝；悲切之感，使她心绪难平。她在坐骑之上，拨动琴弦，奏起悲壮的离别之曲。南飞的大雁听到这悦耳的琴声，看到骑在马上的这个美丽女子，忘记摆动翅膀，跌落地下。从此，昭君就得来“落雁” 的代称。
+        \n闭月\n三国时汉献帝的大臣司徒王允的歌姬貂蝉在后花园拜月时，忽然轻风吹来，一块浮云将那皎洁的明月遮住。这时正好王允瞧见。王允为宣扬他的养女长得如何漂亮，逢人就说，我的女儿和月亮比美，月亮比不过，赶紧躲在云彩后面，因此，貂蝉也就被人们称为“闭月”了。
+        \n羞花\n"羞花"，说的是杨贵妃。唐朝开元年间，唐明皇骄奢淫逸，派出人马，四处搜寻美女。当时寿邸县的宏农杨元琰，有一美貌女子叫杨玉环，被选进宫来。杨玉环进宫后，思念家乡。一天，她到花园赏花散心，看见盛开的牡丹、月季……想自己被关在宫内，虚度青春，不胜叹息，对着盛开的花说："花呀，花呀！你年年岁岁还有盛开之时，我什么时候才有出头之日？"声泪俱下，她刚一摸花。花瓣立即收缩，绿叶卷起低下。哪想到，她摸的是含羞草。这时，被一宫娥看见。宫娥到处说，杨玉环和花比美，花儿都含羞低下了头。这件事传到明皇耳朵里，便喜出望外，当即宣杨玉环来见驾，杨玉环浓装艳抹，梳洗打扮后进见，明皇一见，果然美貌无比，便将杨玉环留在身旁侍候。由于杨玉环善于献媚取宠，深得明皇欢心，不久就升为贵妃。杨贵妃得势后，与其兄杨国忠串通一气，玩弄权术，陷害忠良。安史之乱发生以后，明皇携着贵妃和文武大臣西逃，安禄山率兵追赶，不仅要唐朝的江山。还要美女杨贵妃。西逃路上，大臣们质问明皇，国破家亡，社稷难存，你要江山还是要贵妃，贵妃不死，我们各奔西东。万般无奈，明皇赐贵妃一死，自缢于梨园的梨花树下。后来，大诗人白居易写了一首《长恨歌》，记叙的就是这段历史。
+    </string>
+    <string name="image_transition_name">share_image</string>
 </resources>
